# actix_posts

./: .gitignore  Cargo.toml  README.md  data.json
src/: config.rs  handler.rs  main.rs  middleware.rs  routes.rs
src/configs/: app.rs
src/controllers/: posts.rs
src/handler/: data.rs
src/models/: posts.rs
static/: form.html  header.html
templates/: base.html  form.html  index.html  item.html  show.html
