[package]
name = "actix_posts"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
# actix-sessionではデータ格納のためのバックエンドが無効になっているため、どのセッションを使用するか指定する必要がある
actix-session = { version = "0.6.2", default-features = false, features = ["cookie-session"] }
actix-web = "4.8.0"
actix-web-flash-messages = { version = "0.4.2", features = ["sessions"] }
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tera = { version = "1.20.0", default-features = false }
